RF: updated requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 bz2file==0.98
 cycler==0.10.0
+Cython==0.29.6
 dipy==0.16.0
 future==0.17.1
 h5py==2.9.0
@@ -12,5 +13,6 @@ pyparsing==2.2.0
 python-dateutil==2.7.2
 pytz==2018.4
 scipy==1.0.1
+setuptools==39.0.1
 six==1.11.0
 vtk==8.1.0
