New script to validate BIDS folder

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ kiwisolver==1.0.1
 matplotlib==2.2.2
 nibabel==2.3.3
 numpy==1.16.2
+pybids==0.9.1
 pyparsing==2.2.0
 python-dateutil==2.7.2
 pytz==2018.4
