--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 bz2file==0.98
 cycler==0.10.0
+Cython==0.29.12
 fury==0.2.0
 dipy==1.0.0
 future==0.17.1
@@ -8,7 +9,7 @@ kiwisolver==1.0.1
 matplotlib==2.2.2
 nibabel==2.4.0
 numpy==1.16.2
-Pillow==5.2.0
+Pillow==6.2.0
 pybids==0.9.1
 pyparsing==2.2.0
 python-dateutil==2.7.2
