--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ pyparsing==2.2.0
 python-dateutil==2.7.2
 pytz==2018.4
 scipy==1.0.1
+setuptools==39.0.1
 six==1.11.0
 vtk==8.1.0
 coloredlogs==10.0
