--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 
 script:
   - sudo apt-get install libblas-dev liblapack-dev
-  - pip install -r requirements.tx
+  - pip install -r requirements.txt
   - python setup.py build_ext --inplace
   - python setup.py install
   - python setup.py install_scripts
