--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ python:
   - "3.7"
   - "3.8"
 
-before_script:
+before_install:
   - sudo apt-get update
-  - sudo apt-get install build-essential libatlas-base-dev libblas-dev liblapack-dev
+  - sudo apt-get install build-essential libblas-dev liblapack-dev
   - pip install -r requirements.txt
 
 script:
