--- a/requirements.txt
+++ b/requirements.txt
@@ -25,4 +25,4 @@ coloredlogs==10.0
 nilearn==0.6.1
 pytest==5.3.5
 pytest_console_scripts==0.2.0
--e git://github.com/aestrivex/bctpy.git@0.5.1#egg=bct
+-e git://github.com/aestrivex/bctpy.git@0.5.1#egg=bctpy
