--- a/requirements.txt
+++ b/requirements.txt
@@ -25,4 +25,4 @@ coloredlogs==10.0
 nilearn==0.6.1
 pytest==5.3.5
 pytest_console_scripts==0.2.0
--e git://github.com/aestrivex/bctpy.git@1973df9#egg=bctpy
+statsmodels==0.11.1
