--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,6 @@ coloredlogs==10.0
 nilearn==0.6.1
 pytest==5.3.5
 pytest_console_scripts==0.2.0
+spams==2.6.1
+pip install -e git://github.com/daducci/AMICO.git@b599636#egg=amico
+pip install -e git://github.com/daducci/COMMIT.git@17b92e2#egg=commit
