--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 bz2file==0.98
 coloredlogs==10.0
 cycler==0.10.0
-Cython==0.29.12
+Cython==0.29.17
 dipy==1.1.1
 fury==0.2.0
 future==0.17.1
@@ -18,11 +18,13 @@ python-dateutil==2.7.2
 pytz==2018.4
 scikit-learn==0.22.1
 scipy==1.0.1
-setuptools==39.0.1
+setuptools==46.1.3
 six==1.11.0
 vtk==8.1.2
 coloredlogs==10.0
 nilearn==0.6.1
 pytest==5.3.5
 pytest_console_scripts==0.2.0
-spams==2.6.1
+bctpy==0.5.2
+-e git+https://github.com/frheault/AMICO.git@7c7d656#egg=amico
+-e git+https://github.com/frheault/COMMIT.git@62e93a4#egg=commit
