--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,31 @@
-bz2file==0.98
-coloredlogs==10.0
-cycler==0.10.0
-Cython==0.29.17
-dipy==1.1.0
-fury==0.2.0
-future==0.17.1
-h5py==2.9.0
-kiwisolver==1.0.1
-matplotlib==2.2.2
-nibabel==3.0.1
-nilearn==0.6.1
-numpy==1.18.4
-Pillow==6.2.2
-pybids==0.9.1
-pyparsing==2.2.0
-python-dateutil==2.7.2
-pytz==2018.4
-scikit-learn==0.22.1
-scipy==1.4.1
-setuptools==46.1.3
-six==1.15.0
-vtk==8.1.2
-trimeshpy==0.0.2
-coloredlogs==10.0
-nilearn==0.6.1
-pytest==5.3.5
-pytest_console_scripts==0.2.0
-bctpy==0.5.2
-statsmodels==0.11.1
+bz2file>=0.98
+coloredlogs>=10.0
+cycler>=0.10.0
+Cython>=0.29.17
+dipy>=1.1.0
+fury>=0.2.0
+future>=0.17.1
+h5py>=2.9.0
+kiwisolver>=1.0.1
+matplotlib>=2.2.2
+nibabel>=3.0.1
+nilearn>=0.6.1
+numpy>=1.18.0
+Pillow>=6.2.2
+pybids>=0.9.1
+pyparsing>=2.2.0
+python-dateutil>=2.7.2
+pytz>=2018.4
+scikit-learn>=0.22.1
+scipy>=1.4.0
+setuptools>=46.1.3
+six>=1.15.0
+vtk>=8.1.2
+trimeshpy>=0.0.2
+coloredlogs>=10.0
+nilearn>=0.6.1
+pytest>=5.3.5
+pytest_console_scripts>=0.2.0
+bctpy>=0.5.2
+statsmodels>=0.11.1
+dmri-commit>=1.3.8
