--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 bz2file>=0.98
 coloredlogs>=10.0
 cycler>=0.10.0
-Cython>=0.29.17
-dipy>=1.1.0
+Cython>=0.29.0, <0.29.17
+dipy>=1.1, <1.2
 fury>=0.2.0
 future>=0.17.1
 h5py>=2.9.0
@@ -10,7 +10,7 @@ kiwisolver>=1.0.1
 matplotlib>=2.2.2
 nibabel>=3.0.1
 nilearn>=0.6.1
-numpy>=1.18.0
+numpy>=1.18, <1.19
 Pillow>=6.2.2
 pybids>=0.9.1
 pyparsing>=2.2.0
