--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,7 @@ python:
 before_install:
   - sudo apt-get update
   - sudo apt-get install build-essential libblas-dev liblapack-dev
-  - pip install -r requirements.txt
 
 script:
-  - python setup.py build_ext --inplace
-  - python setup.py install
-  - python setup.py install_scripts
+  - python setup.py develop
   - pytest -v
