--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-bz2file==0.98
-coloredlogs==10.0
+bz2file==0.98.*
+coloredlogs==10.0.*
 cycler==0.10.*
 Cython==0.29.*
 dipy==1.1.*
@@ -8,23 +8,23 @@ future==0.17.*
 h5py==2.9.*
 kiwisolver==1.0.*
 matplotlib==2.2.*
-nibabel==3.0.1
-nilearn==0.6.1
+nibabel==3.0.*
+nilearn==0.6.*
 numpy==1.18.*
-Pillow==6.2.2
-pybids==0.9.1
-pyparsing==2.2.0
-python-dateutil==2.7.2
-pytz==2018.4
+Pillow==6.2.*
+pybids==0.9.*
+pyparsing==2.2.*
+python-dateutil==2.7.*
+pytz==2018.4.*
 scikit-learn==0.22.*
 scipy==1.4.*
 setuptools==46.1.*
 six==1.15.*
 vtk==8.1.*
-trimeshpy==0.0.2
-coloredlogs==10.0
-nilearn==0.6.1
-pytest==5.3.5
+trimeshpy==0.0.*
+coloredlogs==10.0.*
+nilearn==0.6.*
+pytest==5.3.*
 pytest_console_scripts==0.2.*
 bctpy==0.5.*
 statsmodels==0.11.*
