--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ nilearn==0.6.*
 pytest==5.3.*
 pytest_console_scripts==0.2.*
 googledrivedownloader==0.*
+requests==2.23.*
 bctpy==0.5.*
 statsmodels==0.11.*
 dmri-commit==1.3.*
