--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ python:
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get install build-essential libblas-dev liblapack-dev
+  - sudo apt-get install build-essential libblas-dev liblapack-dev python3-tk
 
 script:
   - python setup.py develop
+  - export MPLBACKEND="agg"
   - pytest -v
