--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ jobs:
         - export MPLBACKEND="agg"
         - pytest -v
     - stage: Deploy Docker latest
-      if: branch = master && $TRAVIS_TAG == ""
+      if: branch = master AND tag IS NOT present
       script:
         - travis_wait 60 docker build -t docker-scilpy containers
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
