Update condition and python version

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,16 +12,23 @@ jobs:
   include:
     - stage: Test
       language: python
-      python:
-        - "3.5"
-        - "3.6"
-        - "3.7"
-      script:
-        - python setup.py develop
-        - export MPLBACKEND="agg"
-        - pytest -v
+      - python: "3.5"
+        script:
+          - python setup.py develop
+          - export MPLBACKEND="agg"
+          - pytest -v
+      - python: "3.6"
+        script:
+          - python setup.py develop
+          - export MPLBACKEND="agg"
+          - pytest -v
+      - python: "3.7"
+        script:
+          - python setup.py develop
+          - export MPLBACKEND="agg"
+          - pytest -v
     - stage: Deploy Docker latest
-      if: branch = master AND tag IS NOT present
+      if: branch = master AND tag IS blank
       script:
         - travis_wait 60 docker build -t docker-scilpy containers
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
