--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ jobs:
           - export MPLBACKEND="agg"
           - pytest -v
     - stage: Deploy Docker latest
-      if: branch = master AND tag IS blank
+      if: (branch = master AND tag IS blank)
       script:
         - travis_wait 60 docker build -t docker-scilpy containers
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
