--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 dist: xenial
+language: python
+python:
+  - "3.5"
+  - "3.6"
+  - "3.7"
 
 before_install:
   - sudo wget -O- http://neuro.debian.net/lists/xenial.us-ca.full | sudo tee /etc/apt/sources.list.d/neurodebian.sources.list
@@ -8,25 +13,15 @@ before_install:
   - sudo apt-get install -y singularity-container
   - sudo apt-get install build-essential libblas-dev liblapack-dev python3-tk
 
+
+script:
+  - python setup.py develop
+  - export MPLBACKEND="agg"
+  - pytest -v
+
+
 jobs:
   include:
-    - stage: Tests
-      language: python
-      python: "3.5"
-      script:
-        - python setup.py develop
-        - export MPLBACKEND="agg"
-        - pytest -v
-      python: "3.6"
-      script:
-        - python setup.py develop
-        - export MPLBACKEND="agg"
-        - pytest -v
-      -python: "3.7"
-      script:
-        - python setup.py develop
-        - export MPLBACKEND="agg"
-        - pytest -v
     - stage: Deploy Docker latest
       if: (branch = master AND tag IS blank)
       script:
