--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - sudo apt-get install -y singularity-container
   - sudo apt-get install build-essential libblas-dev liblapack-dev python3-tk
 
-name: Tests
+stage: Tests
 script:
   - python setup.py develop
   - export MPLBACKEND="agg"
