--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ bz2file==0.98.*
 coloredlogs==10.0.*
 cycler==0.10.*
 Cython==0.29.*
-dipy>=1.1.2
+dipy==1.2.*
 fury==0.2.*
 future==0.17.*
 h5py==2.9.*
