--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ bz2file==0.98.*
 coloredlogs==10.0.*
 cycler==0.10.*
 Cython==0.29.*
-dipy==1.2.*
+-e git+https://github.com/CHrlS98/dipy.git@f6b6f5ece3e293c7455511420f0f40002b533d11#egg=dipy
 fury==0.2.*
 future==0.17.*
 h5py==2.9.*
