--- a/requirements.txt
+++ b/requirements.txt
@@ -30,5 +30,5 @@ googledrivedownloader==0.*
 requests==2.23.*
 bctpy==0.5.*
 statsmodels==0.11.*
-dmri-commit==1.3.*
+#dmri-commit==1.3.*
 openpyxl==2.6.*
