--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
-dist: bionic
+os:
+  - linux
+  - osx
+
 language: python
 python:
   - "3.6"
@@ -6,12 +9,13 @@ python:
   - "3.8"
 
 before_install:
-  - sudo wget -O- http://neuro.debian.net/lists/bionic.us-ca.full | sudo tee /etc/apt/sources.list.d/neurodebian.sources.list
-  - sudo apt-key adv --recv-keys --keyserver pool.sks-keyservers.net 2649A5A9 || { sudo wget -q -O- http://neuro.debian.net/_static/neuro.debian.net.asc | sudo apt-key add -; }
-  - sudo apt-get update
-  - sudo apt-get update
-  - sudo apt-get install -y singularity-container
-  - sudo apt-get install build-essential libblas-dev liblapack-dev python3-tk
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo wget -O- http://neuro.debian.net/lists/bionic.us-ca.full | sudo tee /etc/apt/sources.list.d/neurodebian.sources.list ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo wget -O- http://neuro.debian.net/lists/bionic.us-ca.full | sudo tee /etc/apt/sources.list.d/neurodebian.sources.list ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-key adv --recv-keys --keyserver pool.sks-keyservers.net 2649A5A9 || { sudo wget -q -O- http://neuro.debian.net/_static/neuro.debian.net.asc | sudo apt-key add -; } ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install -y singularity-container ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install build-essential libblas-dev liblapack-dev python3-tk ; fi
 
 stage: Tests
 script:
@@ -48,4 +52,3 @@ jobs:
         skip_cleanup: true
         on:
           tags: true
-
