--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,16 @@
 dist: bionic
 language: python
-python:
-  - "3.6"
-  - "3.7"
-  - "3.8"
 
 before_install:
-  - sudo wget -O- http://neuro.debian.net/lists/bionic.us-ca.full | sudo tee /etc/apt/sources.list.d/neurodebian.sources.list
-  - sudo apt-key adv --recv-keys --keyserver pool.sks-keyservers.net 2649A5A9 || { sudo wget -q -O- http://neuro.debian.net/_static/neuro.debian.net.asc | sudo apt-key add -; }
-  - sudo apt-get update
-  - sudo apt-get update
-  - sudo apt-get install -y singularity-container
-  - sudo apt-get install build-essential libblas-dev liblapack-dev python3-tk
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew update ; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install pyenv; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo wget -O- http://neuro.debian.net/lists/bionic.us-ca.full | sudo tee /etc/apt/sources.list.d/neurodebian.sources.list ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo wget -O- http://neuro.debian.net/lists/bionic.us-ca.full | sudo tee /etc/apt/sources.list.d/neurodebian.sources.list ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-key adv --recv-keys --keyserver pool.sks-keyservers.net 2649A5A9 || { sudo wget -q -O- http://neuro.debian.net/_static/neuro.debian.net.asc | sudo apt-key add -; } ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install -y singularity-container ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install build-essential libblas-dev liblapack-dev python3-tk ; fi
 
 stage: Tests
 script:
@@ -22,6 +21,21 @@ script:
 
 jobs:
   include:
+    - os: linux
+    dist: bionic
+    python:
+      - "3.6"
+      - "3.7"
+      - "3.8"
+    - os: osx
+    language: generic
+    env: TOXENV=py36
+    - os: osx
+    language: generic
+    env: TOXENV=py37
+    - os: osx
+    language: generic
+    env: TOXENV=py38
     - stage: Deploy Docker latest
       if: branch = master AND type = push
       script:
