--- a/.travis.yml
+++ b/.travis.yml
@@ -15,18 +15,24 @@ jobs:
   include:
     - os: linux
       dist: bionic
-      python:
-        - "3.6"
-        - "3.7"
-        - "3.8"
+      language: python
+      python: "3.6"
+    - os: linux
+      dist: bionic
+      language: python
+      python: "3.7"
+    - os: linux
+      dist: bionic
+      language: python
+      python: "3.8"
     - os: osx
-      language: generic
+      language: python
       env: TOXENV=py36
     - os: osx
-      language: generic
+      language: python
       env: TOXENV=py37
     - os: osx
-      language: generic
+      language: python
       env: TOXENV=py38
     - stage: Deploy Docker latest
       if: branch = master AND type = push
