--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,6 @@
 dist: bionic
 
 before_install:
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew update ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-    yes | sudo port install python$PYTHON;
-    yes | sudo port install py$PYTHON-pip;
-    sudo port select --set python3 python$PYTHON;
-    sudo port select --set pip pip$PYTHON;
-    pip install pyinstaller --user;
-    export PATH=$PATH:/Users/travis/Library/Python/$PYTHON/bin;
-    fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo wget -O- http://neuro.debian.net/lists/bionic.us-ca.full | sudo tee /etc/apt/sources.list.d/neurodebian.sources.list ; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo wget -O- http://neuro.debian.net/lists/bionic.us-ca.full | sudo tee /etc/apt/sources.list.d/neurodebian.sources.list ; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-key adv --recv-keys --keyserver pool.sks-keyservers.net 2649A5A9 || { sudo wget -q -O- http://neuro.debian.net/_static/neuro.debian.net.asc | sudo apt-key add -; } ; fi
@@ -24,23 +15,80 @@ jobs:
       dist: bionic
       language: python
       python: 3.6
+
     - os: linux
       dist: bionic
       language: python
       python: 3.7
+
     - os: linux
       dist: bionic
       language: python
       python: 3.8
+
+    # Inspired by https://github.com/pyload/pyload/blob/main/.travis.yml
     - os: osx
       language: generic
-      env: PYTHON=36
+      env:
+        - TOXENV=py3
+        - HOMEBREW_NO_INSTALL_CLEANUP=1
+        - HOMEBREW_NO_ANALYTICS=1
+      before_cache:
+        - rm -f "$HOME/Library/Caches/pip/log/debug.log"
+      cache:
+        directories:
+          - "$HOME/Library/Caches/pip"
+      addons:
+        homebrew:
+          update: true
+          packages: python@3.6
+      before_install:
+        - python3 -m pip install --upgrade virtualenv
+        - virtualenv -p python3 --system-site-packages "$HOME/venv"
+        - source "$HOME/venv/bin/activate"
+
+    # Inspired by https://github.com/pyload/pyload/blob/main/.travis.yml
     - os: osx
       language: generic
-      env: PYTHON=37
+      env:
+        - TOXENV=py3
+        - HOMEBREW_NO_INSTALL_CLEANUP=1
+        - HOMEBREW_NO_ANALYTICS=1
+      before_cache:
+        - rm -f "$HOME/Library/Caches/pip/log/debug.log"
+      cache:
+        directories:
+          - "$HOME/Library/Caches/pip"
+      addons:
+        homebrew:
+          update: true
+          packages: python@3.7
+      before_install:
+        - python3 -m pip install --upgrade virtualenv
+        - virtualenv -p python3 --system-site-packages "$HOME/venv"
+        - source "$HOME/venv/bin/activate"
+
+    # Inspired by https://github.com/pyload/pyload/blob/main/.travis.yml
     - os: osx
       language: generic
-      env: PYTHON=38
+      env:
+        - TOXENV=py3
+        - HOMEBREW_NO_INSTALL_CLEANUP=1
+        - HOMEBREW_NO_ANALYTICS=1
+      before_cache:
+        - rm -f "$HOME/Library/Caches/pip/log/debug.log"
+      cache:
+        directories:
+          - "$HOME/Library/Caches/pip"
+      addons:
+        homebrew:
+          update: true
+          packages: python@3.8
+      before_install:
+        - python3 -m pip install --upgrade virtualenv
+        - virtualenv -p python3 --system-site-packages "$HOME/venv"
+        - source "$HOME/venv/bin/activate"
+
     - stage: Deploy Docker latest
       if: branch = master AND type = push
       script:
@@ -48,6 +96,7 @@ jobs:
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - docker tag docker-scilpy $DOCKER_USERNAME/docker-scilpy:latest
         - travis_wait 60 docker push $DOCKER_USERNAME/docker-scilpy:latest
+
     - stage: Deploy Docker release
       if: tag IS present
       script:
@@ -55,6 +104,7 @@ jobs:
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - docker tag docker-scilpy $DOCKER_USERNAME/docker-scilpy:$TRAVIS_TAG
         - travis_wait 60 docker push $DOCKER_USERNAME/docker-scilpy:$TRAVIS_TAG
+
     - stage: Deploy Singularity release
       if: tag IS present
       script:
