--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,9 @@ jobs:
           packages: pyenv
       before_install:
         - pyenv install 3.6.0
-        - python3.6 -m pip install --upgrade virtualenv
-        - virtualenv -p python3.6 --system-site-packages "$HOME/venv"
+        - python3 --version
+        - python3 -m pip install --upgrade virtualenv
+        - virtualenv -p python3 --system-site-packages "$HOME/venv"
         - source "$HOME/venv/bin/activate"
 
     # Inspired by https://github.com/pyload/pyload/blob/main/.travis.yml
@@ -66,8 +67,9 @@ jobs:
           packages: pyenv
       before_install:
         - pyenv install 3.7.0
-        - python3.7 -m pip install --upgrade virtualenv
-        - virtualenv -p python3.7 --system-site-packages "$HOME/venv"
+        - python3 --version
+        - python3 -m pip install --upgrade virtualenv
+        - virtualenv -p python3 --system-site-packages "$HOME/venv"
         - source "$HOME/venv/bin/activate"
 
     # Inspired by https://github.com/pyload/pyload/blob/main/.travis.yml
@@ -88,8 +90,9 @@ jobs:
           packages: pyenv
       before_install:
         - pyenv install 3.8.0
-        - python3.8 -m pip install --upgrade virtualenv
-        - virtualenv -p python3.8 --system-site-packages "$HOME/venv"
+        - python3 --version
+        - python3 -m pip install --upgrade virtualenv
+        - virtualenv -p python3 --system-site-packages "$HOME/venv"
         - source "$HOME/venv/bin/activate"
 
     - stage: Deploy Docker latest
