--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ jobs:
           packages: pyenv
       before_install:
         - pyenv install 3.6.0
+        - pyenv global 3.6.0
         - python3 --version
         - python3 -m pip install --upgrade virtualenv
         - virtualenv -p python3 --system-site-packages "$HOME/venv"
@@ -67,6 +68,7 @@ jobs:
           packages: pyenv
       before_install:
         - pyenv install 3.7.0
+        - pyenv global 3.7.0
         - python3 --version
         - python3 -m pip install --upgrade virtualenv
         - virtualenv -p python3 --system-site-packages "$HOME/venv"
@@ -90,6 +92,7 @@ jobs:
           packages: pyenv
       before_install:
         - pyenv install 3.8.0
+        - pyenv global 3.8.0
         - python3 --version
         - python3 -m pip install --upgrade virtualenv
         - virtualenv -p python3 --system-site-packages "$HOME/venv"
