--- a/.travis.yml
+++ b/.travis.yml
@@ -45,9 +45,9 @@ jobs:
       before_install:
         - pyenv install 3.6.0
         - pyenv global 3.6.0
-        - python3 --version
-        - python3 -m pip install --upgrade virtualenv
-        - virtualenv -p python3 --system-site-packages "$HOME/venv"
+        - python --version
+        - python -m pip install --upgrade virtualenv
+        - virtualenv -p python --system-site-packages "$HOME/venv"
         - source "$HOME/venv/bin/activate"
 
     # Inspired by https://github.com/pyload/pyload/blob/main/.travis.yml
@@ -69,9 +69,9 @@ jobs:
       before_install:
         - pyenv install 3.7.0
         - pyenv global 3.7.0
-        - python3 --version
-        - python3 -m pip install --upgrade virtualenv
-        - virtualenv -p python3 --system-site-packages "$HOME/venv"
+        - python --version
+        - python -m pip install --upgrade virtualenv
+        - virtualenv -p python --system-site-packages "$HOME/venv"
         - source "$HOME/venv/bin/activate"
 
     # Inspired by https://github.com/pyload/pyload/blob/main/.travis.yml
@@ -93,9 +93,9 @@ jobs:
       before_install:
         - pyenv install 3.8.0
         - pyenv global 3.8.0
-        - python3 --version
-        - python3 -m pip install --upgrade virtualenv
-        - virtualenv -p python3 --system-site-packages "$HOME/venv"
+        - python --version
+        - python -m pip install --upgrade virtualenv
+        - virtualenv -p python --system-site-packages "$HOME/venv"
         - source "$HOME/venv/bin/activate"
 
     - stage: Deploy Docker latest
