--- a/.travis.yml
+++ b/.travis.yml
@@ -43,6 +43,9 @@ jobs:
           update: true
           packages: pyenv
       before_install:
+        - which python
+        - export PATH=$(pyenv root)/shims:$PATH
+        - which python
         - pyenv install 3.6.0
         - pyenv global 3.6.0
         - python --version
@@ -67,6 +70,9 @@ jobs:
           update: true
           packages: pyenv
       before_install:
+        - which python
+        - export PATH=$(pyenv root)/shims:$PATH
+        - which python
         - pyenv install 3.7.0
         - pyenv global 3.7.0
         - python --version
@@ -91,6 +97,9 @@ jobs:
           update: true
           packages: pyenv
       before_install:
+        - which python
+        - export PATH=$(pyenv root)/shims:$PATH
+        - which python
         - pyenv install 3.8.0
         - pyenv global 3.8.0
         - python --version
