--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,8 @@ jobs:
           packages: pyenv
       before_install:
         - which python
-        - export PATH=$(pyenv root)/shims:$PATH
+        - pyenv root
+        - PATH=$(pyenv root)/shims:$PATH
         - which python
         - pyenv install 3.6.0
         - pyenv global 3.6.0
@@ -71,7 +72,8 @@ jobs:
           packages: pyenv
       before_install:
         - which python
-        - export PATH=$(pyenv root)/shims:$PATH
+        - pyenv root
+        - PATH=$(pyenv root)/shims:$PATH
         - which python
         - pyenv install 3.7.0
         - pyenv global 3.7.0
@@ -98,7 +100,8 @@ jobs:
           packages: pyenv
       before_install:
         - which python
-        - export PATH=$(pyenv root)/shims:$PATH
+        - pyenv root
+        - PATH=$(pyenv root)/shims:$PATH
         - which python
         - pyenv install 3.8.0
         - pyenv global 3.8.0
