--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ scikit-learn==0.22.*
 scipy==1.4.*
 setuptools==46.1.*
 six==1.15.*
-vtk>=8.0.0,<10.0.0
+vtk>=8.0.0
 trimeshpy==0.0.*
 coloredlogs==10.0.*
 nilearn==0.6.*
