--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ coloredlogs==10.0.*
 cycler==0.10.*
 Cython==0.29.*
 dipy==1.3.*
--e git+https://github.com/fury-gl/fury.git@c7505e207105684ba4353389a5a4fe7d8c10bcf0 #egg=fury
+fury==0.7.*
 future==0.17.*
 h5py==2.10.*
 kiwisolver==1.0.*
