--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ python-dateutil==2.7.*
 pytz==2018.4.*
 scikit-learn==0.22.*
 scipy==1.4.*
-setuptools==46.1.*
+setuptools>=46.1.0
 six==1.15.*
 vtk>=8.0.0,<10.0.0
 trimeshpy==0.0.*
