Ignore the right thing

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,24 @@
 [pytest]
 filterwarnings =
-    once
-    default:::scilpy.*
+    default
+    ignore:::dipy
+    ignore:::fury
+    ignore:::h5py
+    ignore:::matplotlib
+    ignore:::nibabel
+    ignore:::nilearn
+    ignore:::numpy
+    ignore:::Pillow
+    once:::bids-validator
+    once:::pybids
+    ignore:::scikit-learn
+    ignore:::sklearn
+    ignore:::scipy
+    ignore:::vtk
+    default:::trimeshpy
+    ignore:::nilearn
+    once:::bctpy
+    once:::statsmodels
+    once:::dmri-commit
+    once:::cvxpy
+    once:::dmri-amico
