Dipy and fury ONCE

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,8 @@
 [pytest]
 filterwarnings =
     default
-    ignore:::dipy
-    ignore:::fury
+    once:::dipy
+    once:::fury
     ignore:::h5py
     ignore:::matplotlib
     ignore:::nibabel
