--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,40 @@
+bids-validator==1.9.*
+bctpy==0.5.*
 bz2file==0.98.*
-coloredlogs==10.0.*
-cycler==0.10.*
+coloredlogs==15.0.*
+cvxpy==1.2.*
+cycler==0.11.*
 Cython==0.29.*
 dipy==1.5.*
-docopt==0.6.2
-fury==0.7.*
-future==0.17.*
-h5py==2.10.*
-joblib==1.1.0
-kiwisolver==1.0.*
-matplotlib==2.2.*
-nibabel==3.0.*
-nilearn==0.6.*
-numpy==1.21.*
-Pillow==9.0.1
-bids-validator==1.6.0
+dmri-amico==1.5.*
+dmri-commit==1.6.*
+docopt==0.6.*
+formulaic==0.3.*
+fury==0.8.*
+future==0.18.*
+h5py==3.7.*
+joblib==1.2.*
+kiwisolver==1.4.*
+matplotlib==3.6.*
+nibabel==4.0.*
+nilearn==0.9.*
+numpy==1.23.*
+openpyxl==3.0.*
+Pillow==9.3.*
 pybids==0.15.*
-pyparsing==2.2.*
+pyparsing==3.0.*
 PySocks==1.7.*
-python-dateutil==2.7.*
-pytz==2018.4.*
-scikit-learn==0.22.*
-scipy==1.4.*
-setuptools==46.1.*
-six==1.15.*
-vtk>=8.0.0,<10.0.0
-trimeshpy==0.0.*
-coloredlogs==10.0.*
-nilearn==0.6.*
-pytest==5.3.*
-pytest_console_scripts==0.2.*
+pytest==7.2.*
+pytest-console-scripts==1.3.*
 pytest-mock==3.10.*
-requests==2.23.*
-bctpy==0.5.*
-statsmodels==0.11.*
-dmri-commit==1.4.*
-openpyxl==2.6.*
-cvxpy==1.1.*
-dmri-amico==1.2.*
-formulaic==0.2.4
+python-dateutil==2.8.*
+pytz==2022.6.*
+requests==2.28.*
+setuptools==65.5.*
+scikit-learn==1.2.*
+scipy==1.9.*
+six==1.16.*
+spams==2.6.5.2
+statsmodels==0.13.*
+trimeshpy==0.0.2
+vtk==9.2.*
