--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ coloredlogs==15.0.*
 cvxpy==1.2.*
 cycler==0.11.*
 Cython==0.29.*
-dipy==1.6.*
+# dipy==1.6.*
+-e git+https://github.com/scilus/hot_dipy@releases/tag/v1.6.1#egg=dipy
 dmri-amico==1.5.*
 dmri-commit==1.6.*
 docopt==0.6.*
