--- a/requirements.txt
+++ b/requirements.txt
@@ -42,4 +42,4 @@ vtk==9.2.*
 h5py>=2.8.0
 packaging>=19.0
 tqdm>=4.30.0
--e git+https://github.com/scilus/hot_dipy@1.6.1#egg=dipy
+-e git+https://github.com/scilus/hot_dipy@1.6.1rc1#egg=dipy
