--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@ bids-validator==1.9.*
 bctpy==0.5.*
 bz2file==0.98.*
 coloredlogs==15.0.*
-cvxpy==1.2.*
+cvxpy==1.3.*
 cycler==0.11.*
-Cython==0.29.*
-dipy==1.6.*
+Cython==0.29.*, !=0.29.29
+# dipy==1.6.*
 dmri-amico==1.5.*
 dmri-commit==1.6.*
 docopt==0.6.*
@@ -30,7 +30,7 @@ pytest-mock==3.10.*
 python-dateutil==2.8.*
 pytz==2022.6.*
 requests==2.28.*
-setuptools==65.5.*
+setuptools==64.0.*
 scikit-learn==1.2.*
 scipy==1.9.*
 six==1.16.*
@@ -38,3 +38,8 @@ spams==2.6.*
 statsmodels==0.13.*
 trimeshpy==0.0.2
 vtk==9.2.*
+# Dipy requirements
+h5py>=2.8.0
+packaging>=19.0
+tqdm>=4.30.0
+-e git+https://github.com/scilus/hot_dipy@1.6.1rc1#egg=dipy
