--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ bids-validator==1.9.*
 bctpy==0.5.*
 bz2file==0.98.*
 coloredlogs==15.0.*
-cvxpy==1.3.0
+cvxpy==1.3.*
 cycler==0.11.*
 Cython==0.29.*, !=0.29.29
 # dipy==1.6.*
