--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ coloredlogs==15.0.*
 cvxpy==1.3.*
 cycler==0.11.*
 Cython==0.29.*, !=0.29.29
-# dipy==1.6.*
+dipy==1.7.*
 dmri-amico==1.5.*
 dmri-commit==1.6.*
 docopt==0.6.*
@@ -38,7 +38,7 @@ statsmodels==0.13.*
 trimeshpy==0.0.2
 vtk==9.2.*
 # Dipy requirements
-h5py>=2.8.0
-packaging>=19.0
-tqdm>=4.30.0
--e git+https://github.com/scilus/hot_dipy@1.6.1rc1#egg=dipy
+#h5py>=2.8.0
+#packaging>=19.0
+#tqdm>=4.30.0
+#-e git+https://github.com/scilus/hot_dipy@1.6.1rc1#egg=dipy
