--- a/requirements.txt
+++ b/requirements.txt
@@ -19,10 +19,12 @@ kiwisolver==1.4.*
 matplotlib==3.6.*
 nibabel==4.0.*
 nilearn==0.9.*
+numba>=0.56.0
 numpy==1.23.*
 openpyxl==3.0.*
 Pillow==9.3.*
 pybids==0.15.*
+pyopencl==2022.1.3
 pyparsing==3.0.*
 PySocks==1.7.*
 pytest==7.2.*
