gitattributes was causing checkout problems. Fine grained line endings determination for text files

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
     "name": "Scilpy development container",
-    "image": "scilus/scilus:latest",
+    "build": { "dockerfile": "Dockerfile" },
     "forwardPorts": [3000],
     "workspaceMount": "source=${localWorkspaceFolder},target=/scilpy,type=bind,consistency=cached",
     "workspaceFolder": "/scilpy",
