--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ fury==0.8.*
 future==0.18.*
 GitPython==3.1.*
 h5py==3.7.*
+importlib==1.0.*
 joblib==1.2.*
 kiwisolver==1.4.*
 matplotlib==3.6.*
@@ -22,6 +23,7 @@ nibabel==4.0.*
 nilearn==0.9.*
 numpy==1.23.*
 openpyxl==3.0.*
+packaging == 23.2.*
 Pillow==10.0.*
 pybids==0.15.*
 pyparsing==3.0.*
@@ -41,7 +43,6 @@ trimeshpy==0.0.2
 vtk==9.2.*
 # Dipy requirements
 h5py>=2.8.0
-packaging>=19.0
 tqdm>=4.30.0
 
 -e git+https://github.com/scilus/hot_dipy@1.8.0.dev0#egg=dipy
