--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,6 @@ fury==0.8.*
 future==0.18.*
 GitPython==3.1.*
 h5py==3.7.*
-importlib==1.0.*
 joblib==1.2.*
 kiwisolver==1.4.*
 matplotlib==3.6.*
@@ -32,7 +31,7 @@ pytest==7.2.*
 pytest-console-scripts==1.3.*
 pytest-mock==3.10.*
 python-dateutil==2.8.*
-pytz==2022.6.*
+pytz==2022.6.*pip3 install setuptools
 requests==2.28.*
 scikit-learn==1.2.*
 scipy==1.9.*
