--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ pytest==7.2.*
 pytest-console-scripts==1.3.*
 pytest-mock==3.10.*
 python-dateutil==2.8.*
-pytz==2022.6.*pip3 install setuptools
+pytz==2022.6.*
 requests==2.28.*
 scikit-learn==1.2.*
 scipy==1.9.*
